@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class User {
  -String name
  -String email
  -String password
}

class Administrator {
  -String email
}

class Courier {
  -Integer nif
  -Integer phoneNumber
  -Double socialSecurityNumber
  -String status
}

class Pharmacy {
  -String designation
  -String email
}

class Address {
  -String street
  -String postalCode
  -Integer number
  -String locality
  -String GPSCoordinates
  -Integer elevation
}

Platform "1" -- "1" Administrator : has registered >
Platform "1" -- "*" User : has registered >
Platform "1" -- "1" Pharmacy : has registered >

Administrator "1" -- "*" Pharmacy : creates/manages >
Administrator "0..1" -- "1" User : act as >
Administrator "1" -- "*" Courier : manages >

Courier "*" -- "1" Pharmacy : associated to >

Pharmacy "1" -- "1" Address : has >

@enduml
